--- a/eas.json
+++ b/eas.json
@@ -1,7 +1,6 @@
 {
   "cli": {
-    "version": ">= 18.0.6",
-    "appVersionSource": "remote"
+    "version": ">= 3.0.0"
   },
   "build": {
     "development": {
@@ -12,7 +11,9 @@
       "distribution": "internal"
     },
     "production": {
-      "autoIncrement": true
+      "android": {
+        "buildType": "apk"
+      }
     }
   },
   "submit": {
